[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/GUI_layer.gd" type="Script" id=2]
[ext_resource path="res://GUI/ScreenCover.gd" type="Script" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float step_start = 0.5;
uniform float step_size = 0.2;

void fragment() {
	float point = smoothstep(step_start, step_start + step_size, UV.y);
	COLOR = vec4(0.0,0.0,0.0,abs(point - 1.0));
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/step_start = 0.5
shader_param/step_size = 0.2

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 1 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="HearthsContainer" type="GridContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
columns = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="Node" parent="."]

[node name="ScreenCover" type="ColorRect" parent="Fade"]
visible = false
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Fade"]

[node name="LoseLabel" type="Label" parent="Fade"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -119.563
margin_bottom = 119.437
custom_fonts/font = SubResource( 3 )
text = "You Lose!
Press R to Restart"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -60.563
margin_bottom = 57.437
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "You Win!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
